src/test/resources/frontendReference/invalid/syntaxErr/array/arrayExpr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:22 -- mismatched input '+' expecting {'end', ';'}
1 parser error(s) detected, no further compilation attempted.
